--- a/SlackDarkTheme.css
+++ b/SlackDarkTheme.css
@@ -4,7 +4,7 @@ a { color: #949494; }
 
 a:link, a:visited { color: #949494; }
 
-a:hover, a:active, a:focus { color: #c7c7c7; }
+a:hover, a:active, a:focus { color: #8c8c8c; }
 
 hr { border-bottom: 1px solid #424242; border-top: 1px solid #222; }
 
