--- a/SlackDarkTheme.css
+++ b/SlackDarkTheme.css
@@ -1,15 +1,1 @@
-body { background: #222; color: #e6e6e6; }
-
-a { color: #949494; }
-
-a:link, a:visited { color: #949494; }
-
-a:hover, a:active, a:focus { color: #c7c7c7; }
-
-hr { border-bottom: 1px solid #424242; border-top: 1px solid #222; }
-
-h1, h2, h3, h4 { color: #e6e6e6; }
-
-h1 a { color: #e6e6e6; }
-
-h1 a:active, h1 a:hover, h1 a:link, h1 a:visited { color: #e6e6e6; }
+.c-message__body { color: #e6e6e6; }
