--- a/SlackDarkTheme.css
+++ b/SlackDarkTheme.css
@@ -1,1 +1,12 @@
-.c-message__body { color: #e6e6e6; }
+        .c-message__body { color: rgb(153, 174, 177); }
+        .c-message_list__unread_divider__label, .p-message_pane__unread_banner__banner, .c-mrkdwn__member--mention { background: rgb(177, 202, 17) !important; }
+        .p-message_pane__unread_banner__banner { color: #111; text-shadow: none; }
+        .c-message_list__unread_divider__separator { border-color: rgb(177, 202, 17); }
+        #team_menu, .p-channel_sidebar { background: #023f4e !important; }
+        .c-presence--active {color: rgb(177, 202, 17) !important;}
+        nav.p-channel_sidebar .p-channel_sidebar__channel--selected, .p-channel_sidebar__link--selected, .c-message_list__day_divider__label__pill, .p-message_pane .c-message_list.c-virtual_list--scrollbar > .c-scrollbar__hider:before { color: #eee !important; background: rgb(27, 139, 210) !important; }
+        .c-mrkdwn__member--link { background: rgb(27, 139, 210); color: rgb(0, 43, 54) !important; }
+        .c-message_list__day_divider__line { border-top-color: rgb(27, 139, 210) !important}
+        #msg_input, #primary_file_button { background: rgb(2, 55, 68) !important; }
+        #msg_form #msg_input { border-color: transparent; }
+        #msg_input.texty_legacy .ql-placeholder { color: #fff; opacity: 0.5; }
